--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "envalid": "^3.0.0",
     "express": "^4.15.3",
